--- a/frontend/frontend/package.json
+++ b/frontend/frontend/package.json
@@ -16,6 +16,7 @@
     "bootstrap-icons": "^1.13.1",
     "path": "^0.12.7",
     "react": "^19.1.0",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.60.0",
     "react-router-dom": "^7.6.3"
