Se añadió el requerimiento de importarCSV

--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,9 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
+    "csv-parser": "^3.2.0",
     "express": "^5.1.0",
+    "multer": "^2.0.1",
     "path": "^0.12.7",
     "sequelize": "^6.37.7",
     "sqlite3": "^5.1.7"
