--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,8 @@
     "multer": "^2.0.1",
     "path": "^0.12.7",
     "sequelize": "^6.37.7",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "tesseract.js": "^6.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
