--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "express": "^5.1.0",
     "multer": "^2.0.1",
     "path": "^0.12.7",
+    "pdf-parse": "^1.1.1",
     "sequelize": "^6.37.7",
     "sqlite3": "^5.1.7",
     "tesseract.js": "^6.0.1"
